WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46793
[Chromium] failed to build without ACCELERATED_COMPOSITING
https://bugs.webkit.org/show_bug.cgi?id=46793
Summary
[Chromium] failed to build without ACCELERATED_COMPOSITING
Hajime Morrita
Reported
2010-09-29 02:33:43 PDT
Change on
http://trac.webkit.org/changeset/68477
moved constants inside ACCELERATED_COMPOSITING. But these values are referred outside of it.
Attachments
Patch
(4.82 KB, patch)
2010-09-29 02:39 PDT
,
Hajime Morrita
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-09-29 02:39:53 PDT
Created
attachment 69174
[details]
Patch
Hajime Morrita
Comment 2
2010-09-29 05:17:24 PDT
Committed
r68638
: <
http://trac.webkit.org/changeset/68638
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug