2010-09-29  MORITA Hajime  <morrita@google.com>

[Chromium] failed to build without ACCELERATED_COMPOSITING
        https://bugs.webkit.org/show_bug.cgi?id=46793

        Moved constant definitions from inside ACCELERATED_COMPOSITING to
        outside of the condition.

        * WebCore.gypi:
        * platform/graphics/chromium/VideoFrameChromium.cpp: Added just for defining constants.
        * platform/graphics/chromium/VideoLayerChromium.cpp:

Canonical link: https://commits.webkit.org/59300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68638 268f45cc-cd09-0410-ab3c-d52691b4dbfc